# personal-todoer

./: pyproject.toml
todoer/: asgi.py  settings.py  urls.py  wsgi.py
